--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,31 @@ body{
     min-height: 100vh;
     display: block;
     position: fixed;
-    left: 270px;
+    left: 240px;
+    padding: 0 30px;
     top: 0;
     right: 0;
     z-index: 0;
     opacity: 1;
+}
+.padd-15 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    /* background-color: aquamarine; */
+    margin: auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
 }
 
 .aside{
@@ -114,6 +134,37 @@ ul{
     top: 20px;
     border-radius: 5px;
     background: var(--bg-black-100);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.aside .nav-toggler span {
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    display: inline-block;
+    position: relative;
+}
+
+.aside .nav-toggler span::before{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: -6px;
+    left: 0;
+}
+
+.aside .nav-toggler span::after{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: 6px;
+    left: 0;
 }
 
 .aside .nav{
@@ -141,3 +192,33 @@ ul{
 .aside .nav li a i {
     margin-right: 15px;
 }
+
+/* hoeme section start */
+
+.home {
+    min-height: 100vh;
+    display: flex;
+    color: var(--text-black-900);
+}
+
+.home .home-info {
+    flex: 0 0 60%;
+    max-width: 60%;
+}
+
+h3.hello {
+    
+}
+
+.home .home-img {
+    flex: 0 0 40%;
+    max-width: 40%; 
+    text-align: center;
+    position: relative;
+}
+
+.home .home-img img {
+    height: 400px; 
+}
+
+/* hoeme section end */
