--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,20 @@ body{
     position: relative;
 }
 
+.btn {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    background: var(--skin-color);
+    transition: all 0.3s ease;
+    /* 44:19 */
+}
+
+
 .aside{
     width: 270px;
     background: var(--bg-black-100);
@@ -207,7 +221,30 @@ ul{
 }
 
 h3.hello {
-    
+    font-size: 28px;
+    margin: 15px 0;
+}
+
+h3.hello span{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--skin-color);
+}
+
+h3.my-proffession {
+    font-size: 30px;
+    margin: 15px 0;
+}
+
+.typing{
+    color: var(--skin-color);
+}
+
+home-info p {
+    margin-bottom: 70px;
+    font-size: 20px;
+    color: var(--text-black-700);
 }
 
 .home .home-img {
