--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,19 @@ body{
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 240px;
     padding: 0 30px;
-    top: 0;
-    right: 0;
-    z-index: 0;
     opacity: 1;
 }
+
+.hidden{
+    display: none !important;
+}
+
+.main-content{
+    padding-left: 270px;
+}
+
+
 .padd-15 {
     padding-left: 15px;
     padding-right: 15px;
@@ -73,6 +78,10 @@ body{
     background: var(--skin-color);
     transition: all 0.3s ease;
     /* 44:19 */
+}
+
+.btn:hover {
+    transform: scale(1.05);
 }
 
 
@@ -254,7 +263,31 @@ home-info p {
     position: relative;
 }
 
+.home-img::after {
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+    right: 20px;
+    bottom: -40px;
+}
+
+.home-img::before {
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
+    left: -20px;
+    top: -40px;
+}
+
 .home .home-img img {
+    margin: auto;
+    border-radius: 5px;
     height: 400px; 
 }
 
